# 05-03-Figures-Methods

./: CMakeLists.txt  Figure.cpp  Figure.h  Quadrangle.cpp  Quadrangle.h  Triangle.cpp  Triangle.h  main.cpp
Quadrangle/: Parallelogram.cpp  Parallelogram.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Square.cpp  Square.h
Triangle/: EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  RightTriangle.cpp  RightTriangle.h
